POWR-220 Add patch I created on drupal.org

--- a/composer.json
+++ b/composer.json
@@ -10,18 +10,18 @@
         }
     ],
     "repositories": {
-       "0": {
-           "type": "composer",
-           "url": "https://packages.drupal.org/8"
-       },
-       "1": {
-           "type": "composer",
-           "url": "https://asset-packagist.org"
-       },
-       "dev": {
-           "type": "vcs",
-           "url": "https://github.com/acquia/lightning-dev"
-       }
+        "0": {
+            "type": "composer",
+            "url": "https://packages.drupal.org/8"
+        },
+        "1": {
+            "type": "composer",
+            "url": "https://asset-packagist.org"
+        },
+        "dev": {
+            "type": "vcs",
+            "url": "https://github.com/acquia/lightning-dev"
+        }
     },
     "require": {
         "acquia/lightning": "^3.1",
@@ -100,7 +100,7 @@
     },
     "conflict": {
         "drupal/drupal": "*",
-        "doctrine/common":">2.8"
+        "doctrine/common": ">2.8"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
@@ -134,9 +134,9 @@
             },
             "drupal/group": {
                 "2774827 - node:group functionality for adding node:group:title": "https://www.drupal.org/files/issues/group_add-node-group-tokens-2774827-22.patch",
-                "2984315 - Create an enabler that will allow Media to be added as group content, and access-controlled by group permissions.": "https://www.drupal.org/files/issues/2018-07-24/2984315-3.patch"
-            }
-            ,
+                "2984315 - Create an enabler that will allow Media to be added as group content, and access-controlled by group permissions.": "https://www.drupal.org/files/issues/2018-07-24/2984315-3.patch",
+                "2842630 - Empty page when trying to create group node": "https://www.drupal.org/files/issues/2018-09-06/2842630-10.patch"
+            },
             "drupal/clamav": {
                 "2915237 - allowUncheckedFiles() not working as expected": "https://www.drupal.org/files/issues/2915237-2.patch"
             },
@@ -153,16 +153,26 @@
             "merge-extra": false
         },
         "installer-paths": {
-            "web/core": ["type:drupal-core"],
+            "web/core": [
+                "type:drupal-core"
+            ],
             "web/libraries/{$name}": [
                 "type:drupal-library",
                 "type:bower-asset",
                 "type:npm-asset"
             ],
-            "web/modules/contrib/{$name}": ["type:drupal-module"],
-            "web/profiles/contrib/{$name}": ["type:drupal-profile"],
-            "web/themes/contrib/{$name}": ["type:drupal-theme"],
-            "web/drush/contrib/{$name}": ["type:drupal-drush"]
+            "web/modules/contrib/{$name}": [
+                "type:drupal-module"
+            ],
+            "web/profiles/contrib/{$name}": [
+                "type:drupal-profile"
+            ],
+            "web/themes/contrib/{$name}": [
+                "type:drupal-theme"
+            ],
+            "web/drush/contrib/{$name}": [
+                "type:drupal-drush"
+            ]
         }
     }
 }
