POWR-94 - Created new Audio media type as a virtual clone of Video and configured it for use with groups in the same way that Video is configured.

--- a/web/sites/default/config/core.entity_view_display.group.elected_official.search_result.yml
+++ b/web/sites/default/config/core.entity_view_display.group.elected_official.search_result.yml
@@ -118,6 +118,7 @@ hidden:
   field_building: true
   field_bureaus: true
   field_email: true
+  field_legacy_path: true
   field_logo: true
   field_official_title: true
   field_phone: true
