--- a/web/sites/default/config/core.entity_view_display.group.project.search_result.yml
+++ b/web/sites/default/config/core.entity_view_display.group.project.search_result.yml
@@ -112,6 +112,7 @@ hidden:
   created: true
   field_audience: true
   field_date_time_range: true
+  field_legacy_path: true
   field_shortname_or_acronym: true
   field_topics: true
   uid: true
