--- a/web/sites/default/config/core.entity_view_display.node.event.search_result.yml
+++ b/web/sites/default/config/core.entity_view_display.node.event.search_result.yml
@@ -110,6 +110,7 @@ hidden:
   field_end_date: true
   field_end_time: true
   field_event_location: true
+  field_legacy_path: true
   field_start_date: true
   field_start_time: true
   links: true
