--- a/web/sites/default/config/core.entity_view_display.node.service_location.search_result.yml
+++ b/web/sites/default/config/core.entity_view_display.node.service_location.search_result.yml
@@ -98,6 +98,7 @@ hidden:
   field_building: true
   field_floor: true
   field_get_directions: true
+  field_legacy_path: true
   field_open_hours: true
   links: true
   scheduled_publication: true
