--- a/web/sites/default/config/field.field.media.audio.field_media_in_library.yml
+++ b/web/sites/default/config/field.field.media.audio.field_media_in_library.yml
@@ -1,22 +1,20 @@
-uuid: 2be7ce6a-7a47-4075-b2af-a0cb8bec0a48
+uuid: ffac3423-279e-4faa-8e1e-a21113f467e6
 langcode: en
 status: true
 dependencies:
   config:
     - field.storage.media.field_media_in_library
-    - media.type.audio_file
+    - media.type.audio
   module:
     - custom_add_another
 third_party_settings:
   custom_add_another:
     custom_add_another: ''
     custom_remove: ''
-_core:
-  default_config_hash: hIskJF6WjHEMFiykLQcTfblXXer2ZJtwqOIMGIhjMWs
-id: media.audio_file.field_media_in_library
+id: media.audio.field_media_in_library
 field_name: field_media_in_library
 entity_type: media
-bundle: audio_file
+bundle: audio
 label: 'Show in media library'
 description: ''
 required: false
