--- a/web/sites/default/config/views.view.group_media.yml
+++ b/web/sites/default/config/views.view.group_media.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - field.storage.media.field_document
     - image.style.thumbnail
+    - media.type.audio
     - media.type.document
     - media.type.image
     - media.type.video
@@ -706,6 +707,7 @@ display:
           operator: in
           value:
             all: all
+            audio: audio
             document: document
             image: image
             video: video
@@ -772,11 +774,10 @@ display:
           admin_label: 'Media group content'
           required: true
           group_content_plugins:
+            'group_media:audio': 'group_media:audio'
             'group_media:document': 'group_media:document'
             'group_media:image': 'group_media:image'
             'group_media:video': 'group_media:video'
-            'group_media:instagram': '0'
-            'group_media:tweet': '0'
           entity_type: media
           plugin_id: group_content_to_entity_reverse
       arguments:
@@ -793,7 +794,7 @@ display:
             title_enable: false
             title: All
           title_enable: true
-          title: '{{ arguments.gid|placeholder }} videos'
+          title: '{{ arguments.gid|placeholder }} media'
           default_argument_type: group_id_from_url
           default_argument_options: {  }
           default_argument_skip_url: false
