--- a/web/sites/default/config/workflows.workflow.editorial.yml
+++ b/web/sites/default/config/workflows.workflow.editorial.yml
@@ -3,6 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
+    - media.type.audio
     - media.type.document
     - media.type.image
     - media.type.video
@@ -74,6 +75,7 @@ type_settings:
         - published
   entity_types:
     media:
+      - audio
       - document
       - image
       - video
