--- a/web/sites/default/config/core.entity_view_display.node.information.search_result.yml
+++ b/web/sites/default/config/core.entity_view_display.node.information.search_result.yml
@@ -93,5 +93,6 @@ content:
 hidden:
   content_moderation_control: true
   field_body: true
+  field_legacy_path: true
   links: true
   scheduled_publication: true
