--- a/web/sites/default/config/core.entity_view_display.node.news.search_result.yml
+++ b/web/sites/default/config/core.entity_view_display.node.news.search_result.yml
@@ -94,5 +94,6 @@ content:
 hidden:
   content_moderation_control: true
   field_body: true
+  field_legacy_path: true
   field_topics: true
   links: true
