--- a/web/sites/default/config/views.view.group_nodes.yml
+++ b/web/sites/default/config/views.view.group_nodes.yml
@@ -7,6 +7,7 @@ dependencies:
     - gnode
     - group
     - node
+    - user
 _core:
   default_config_hash: ZSKjHkl45YTbsYHiq_H7py04GDuX95t-GOHAAb8ZFbk
 id: group_nodes
@@ -669,7 +670,7 @@ display:
           exposed: true
           expose:
             operator_id: title_op
-            label: Title
+            label: 'Title contains'
             description: ''
             use_operator: false
             operator: title_op
@@ -681,9 +682,6 @@ display:
               authenticated: authenticated
               anonymous: '0'
               administrator: '0'
-              layout_manager: '0'
-              media_creator: '0'
-              media_manager: '0'
             placeholder: ''
           is_grouped: false
           group_info:
@@ -713,7 +711,7 @@ display:
           exposed: true
           expose:
             operator_id: type_op
-            label: Type
+            label: 'Content type'
             description: ''
             use_operator: false
             operator: type_op
@@ -725,8 +723,8 @@ display:
               authenticated: authenticated
               anonymous: '0'
               administrator: '0'
-              group_admin: '0'
             reduce: false
+            argument: ''
           is_grouped: false
           group_info:
             label: ''
@@ -742,6 +740,87 @@ display:
           entity_type: node
           entity_field: type
           plugin_id: bundle
+        moderation_state_1:
+          id: moderation_state_1
+          table: node_field_revision
+          field: moderation_state
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: in
+          value: {  }
+          group: 1
+          exposed: true
+          expose:
+            operator_id: moderation_state_1_op
+            label: 'Moderation state'
+            description: ''
+            use_operator: false
+            operator: moderation_state_1_op
+            identifier: moderation_state_1
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+              anonymous: '0'
+              administrator: '0'
+            reduce: false
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          entity_type: node
+          plugin_id: moderation_state_filter
+        uid:
+          id: uid
+          table: node_field_data
+          field: uid
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: in
+          value: {  }
+          group: 1
+          exposed: true
+          expose:
+            operator_id: uid_op
+            label: Author
+            description: ''
+            use_operator: false
+            operator: uid_op
+            identifier: uid
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+              anonymous: '0'
+              administrator: '0'
+            reduce: false
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          entity_type: node
+          entity_field: uid
+          plugin_id: user_name
       sorts: {  }
       header: {  }
       footer: {  }
@@ -823,7 +902,8 @@ display:
         - url
         - url.query_args
         - 'user.node_grants:view'
-      tags: {  }
+      tags:
+        - 'config:workflow_list'
   page_1:
     display_plugin: page
     id: page_1
@@ -851,4 +931,5 @@ display:
         - url
         - url.query_args
         - 'user.node_grants:view'
-      tags: {  }
+      tags:
+        - 'config:workflow_list'
