--- a/web/sites/default/config/search_api.index.full_index.yml
+++ b/web/sites/default/config/search_api.index.full_index.yml
@@ -3,11 +3,11 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.node.field_body
     - field.storage.group.field_official_organization_name
     - field.storage.group.field_official_title
     - field.storage.group.field_shortname_or_acronym
     - field.storage.group.field_summary
+    - field.storage.node.field_body
     - field.storage.node.field_summary
     - search_api.server.pantheon
   module:
@@ -21,6 +21,15 @@ name: 'Full index'
 description: 'Full index of all content entities on Portland.gov'
 read_only: false
 field_settings:
+  aggregated_topic:
+    label: 'Aggregated topic'
+    property_path: aggregated_field
+    type: integer
+    configuration:
+      type: union
+      fields:
+        - 'entity:group/field_topics'
+        - 'entity:node/field_topics'
   description:
     label: Description
     datasource_id: 'entity:taxonomy_term'
