POWR-94 - completed configuration of audio media type, paragraph type, entity browser, group types, etc., to replicate what's been done for video media type.

--- a/web/sites/default/config/core.entity_form_display.media.audio.media_browser.yml
+++ b/web/sites/default/config/core.entity_form_display.media.audio.media_browser.yml
@@ -1,8 +1,9 @@
-uuid: 0f5a4647-6864-4319-9020-b732490fc58b
+uuid: 26e1f9dd-cd1e-4d70-8e27-d72b8a79c8f2
 langcode: en
 status: true
 dependencies:
   config:
+    - core.entity_form_mode.media.media_browser
     - field.field.media.audio.field_media_in_library
     - field.field.media.audio.field_media_video_embed_field
     - field.field.media.audio.field_transcript
@@ -10,30 +11,22 @@ dependencies:
   module:
     - content_moderation
     - maxlength
-    - text
-    - video_embed_field
-id: media.audio.default
+    - path
+id: media.audio.media_browser
 targetEntityType: media
 bundle: audio
-mode: default
+mode: media_browser
 content:
-  field_media_video_embed_field:
-    weight: 1
-    settings: {  }
-    third_party_settings: {  }
-    type: video_embed_field_textfield
+  field_media_in_library:
+    type: boolean_checkbox
+    weight: 2
     region: content
-  field_transcript:
-    weight: 3
     settings:
-      rows: 5
-      placeholder: ''
+      display_label: true
     third_party_settings: {  }
-    type: text_textarea
-    region: content
   moderation_state:
     type: moderation_state_default
-    weight: 4
+    weight: 5
     settings: {  }
     region: content
     third_party_settings: {  }
@@ -48,14 +41,26 @@ content:
       maxlength:
         maxlength_js: 60
         maxlength_js_label: 'Content limited to @limit characters, remaining: <strong>@remaining</strong>'
-  preview:
-    weight: 2
+  path:
+    type: path
+    weight: 3
     region: content
     settings: {  }
     third_party_settings: {  }
+  preview:
+    weight: 1
+    region: content
+    settings: {  }
+    third_party_settings: {  }
+  status:
+    type: boolean_checkbox
+    weight: 4
+    region: content
+    settings:
+      display_label: true
+    third_party_settings: {  }
 hidden:
   created: true
-  field_media_in_library: true
-  path: true
-  status: true
+  field_media_video_embed_field: true
+  field_transcript: true
   uid: true
