--- a/web/sites/default/config/core.entity_view_display.media.audio.default.yml
+++ b/web/sites/default/config/core.entity_view_display.media.audio.default.yml
@@ -6,10 +6,8 @@ dependencies:
     - field.field.media.audio.field_media_in_library
     - field.field.media.audio.field_media_video_embed_field
     - field.field.media.audio.field_transcript
-    - image.style.thumbnail
     - media.type.audio
   module:
-    - image
     - text
     - user
     - video_embed_field
@@ -18,10 +16,15 @@ targetEntityType: media
 bundle: audio
 mode: default
 content:
+  content_moderation_control:
+    weight: 0
+    region: content
+    settings: {  }
+    third_party_settings: {  }
   created:
     label: hidden
     type: timestamp
-    weight: 0
+    weight: 5
     region: content
     settings:
       date_format: medium
@@ -29,7 +32,7 @@ content:
       timezone: ''
     third_party_settings: {  }
   field_media_video_embed_field:
-    weight: 6
+    weight: 2
     label: above
     settings:
       responsive: true
@@ -40,28 +43,27 @@ content:
     type: video_embed_field_video
     region: content
   field_transcript:
-    weight: 7
+    weight: 3
     label: above
     settings: {  }
     third_party_settings: {  }
     type: text_default
     region: content
-  thumbnail:
-    type: image
-    weight: 5
-    label: hidden
-    settings:
-      image_style: thumbnail
-      image_link: ''
+  name:
+    type: string
+    weight: 1
     region: content
+    label: above
+    settings:
+      link_to_entity: false
     third_party_settings: {  }
   uid:
     label: hidden
     type: author
-    weight: 0
+    weight: 4
     region: content
     settings: {  }
     third_party_settings: {  }
 hidden:
   field_media_in_library: true
-  name: true
+  thumbnail: true
