--- a/web/sites/default/config/core.entity_view_display.media.audio.thumbnail.yml
+++ b/web/sites/default/config/core.entity_view_display.media.audio.thumbnail.yml
@@ -1,68 +1,47 @@
 uuid: 4a61139e-b45c-4761-a677-306e68d3623d
 langcode: en
-status: false
+status: true
 dependencies:
   config:
     - core.entity_view_mode.media.thumbnail
     - field.field.media.audio.field_media_in_library
     - field.field.media.audio.field_media_video_embed_field
     - field.field.media.audio.field_transcript
-    - image.style.thumbnail
+    - image.style.medium
     - media.type.audio
   module:
+    - ds
     - image
-    - text
-    - user
-    - video_embed_field
 id: media.audio.thumbnail
 targetEntityType: media
 bundle: audio
 mode: thumbnail
 content:
-  created:
-    label: hidden
-    type: timestamp
+  content_moderation_control:
     weight: 0
     region: content
-    settings:
-      date_format: medium
-      custom_date_format: ''
-      timezone: ''
-    third_party_settings: {  }
-  field_media_video_embed_field:
-    weight: 6
-    label: above
-    settings:
-      responsive: true
-      width: 854
-      height: 480
-      autoplay: true
-    third_party_settings: {  }
-    type: video_embed_field_video
-    region: content
-  field_transcript:
-    weight: 7
-    label: above
     settings: {  }
     third_party_settings: {  }
-    type: text_default
-    region: content
   thumbnail:
     type: image
-    weight: 5
+    weight: 1
     label: hidden
     settings:
-      image_style: thumbnail
+      image_style: medium
       image_link: ''
     region: content
-    third_party_settings: {  }
-  uid:
-    label: hidden
-    type: author
-    weight: 0
-    region: content
-    settings: {  }
-    third_party_settings: {  }
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
 hidden:
+  created: true
   field_media_in_library: true
+  field_media_video_embed_field: true
+  field_transcript: true
   name: true
+  uid: true
