--- a/web/sites/default/config/field.field.media.audio.field_media_video_embed_field.yml
+++ b/web/sites/default/config/field.field.media.audio.field_media_video_embed_field.yml
@@ -16,12 +16,15 @@ id: media.audio.field_media_video_embed_field
 field_name: field_media_video_embed_field
 entity_type: media
 bundle: audio
-label: 'Video Url'
-description: ''
+label: 'Audio Url'
+description: 'Supports audio links hosted on YouTube or Vimeo.'
 required: true
 translatable: true
 default_value: {  }
 default_value_callback: ''
 settings:
-  allowed_providers: {  }
+  allowed_providers:
+    vimeo: vimeo
+    youtube: youtube
+    youtube_playlist: youtube_playlist
 field_type: video_embed_field
