--- a/web/sites/default/config/field.field.node.event.field_event_location.yml
+++ b/web/sites/default/config/field.field.node.event.field_event_location.yml
@@ -85,4 +85,7 @@ settings:
       video:
         weight: -19
         enabled: false
+      audio:
+        weight: 20
+        enabled: false
 field_type: entity_reference_revisions
