--- a/web/sites/default/config/field.field.node.guide.field_body.yml
+++ b/web/sites/default/config/field.field.node.guide.field_body.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - field.storage.node.field_body
     - node.type.guide
+    - paragraphs.paragraphs_type.audio
     - paragraphs.paragraphs_type.columns_equal
     - paragraphs.paragraphs_type.document
     - paragraphs.paragraphs_type.email_button
@@ -49,6 +50,7 @@ settings:
       document: document
       image: image
       video: video
+      audio: audio
     target_bundles_drag_drop:
       simple_text:
         enabled: true
@@ -101,4 +103,7 @@ settings:
       service_location:
         weight: -19
         enabled: false
+      audio:
+        enabled: true
+        weight: 20
 field_type: entity_reference_revisions
