--- a/web/sites/default/config/media.type.audio.yml
+++ b/web/sites/default/config/media.type.audio.yml
@@ -3,10 +3,14 @@ langcode: en
 status: true
 dependencies:
   module:
+    - crop
     - video_embed_media
+third_party_settings:
+  crop:
+    image_field: null
 id: audio
 label: Audio
-description: 'Audio hosted by YouTube.'
+description: 'An audio file hosted by YouTube.'
 source: video_embed_field
 queue_thumbnail_downloads: false
 new_revision: false
