--- a/web/sites/default/config/search_api.index.full_index.yml
+++ b/web/sites/default/config/search_api.index.full_index.yml
@@ -13,6 +13,7 @@ dependencies:
   module:
     - search_api_solr
     - search_api
+    - portland
     - group
     - node
     - taxonomy
@@ -30,6 +31,11 @@ field_settings:
       fields:
         - 'entity:group/field_topics'
         - 'entity:node/field_topics'
+  content_id:
+    label: 'Content ID'
+    datasource_id: 'entity:node'
+    property_path: nid
+    type: integer
   description:
     label: Description
     datasource_id: 'entity:taxonomy_term'
@@ -83,6 +89,11 @@ field_settings:
     dependencies:
       config:
         - field.storage.node.field_summary
+  group_id:
+    label: 'Group ID'
+    datasource_id: 'entity:group'
+    property_path: id
+    type: integer
   label:
     label: Title
     datasource_id: 'entity:group'
@@ -111,6 +122,10 @@ field_settings:
     label: Name
     datasource_id: 'entity:taxonomy_term'
     property_path: name
+    type: string
+  portland_group_title_field:
+    label: 'Group title'
+    property_path: portland_group_title_field
     type: string
   rendered_item:
     label: 'Rendered HTML output'
@@ -195,6 +210,7 @@ processor_settings:
   add_url: {  }
   aggregated_field: {  }
   entity_status: {  }
+  portland_group_title_field: {  }
   rendered_item: {  }
   stemmer:
     all_fields: true
