POWR-349 Rename facet title. Hide facet when no result.

--- a/web/sites/default/config/block.block.aggregatedtopic.yml
+++ b/web/sites/default/config/block.block.aggregatedtopic.yml
@@ -17,9 +17,9 @@ provider: null
 plugin: 'facet_block:aggregated_topic'
 settings:
   id: 'facet_block:aggregated_topic'
-  label: 'Filter by topic'
+  label: 'Results by topic'
   provider: facets
-  label_display: visible
+  label_display: '0'
   block_id: aggregatedtopic
 visibility:
   request_path:
