--- a/web/sites/default/config/block.block.grouptitle.yml
+++ b/web/sites/default/config/block.block.grouptitle.yml
@@ -17,9 +17,9 @@ provider: null
 plugin: 'facet_block:group_title'
 settings:
   id: 'facet_block:group_title'
-  label: 'Filter by group'
+  label: 'Results by site'
   provider: facets
-  label_display: visible
+  label_display: '0'
   block_id: grouptitle
 visibility:
   request_path:
