--- a/web/sites/default/config/facets.facet.aggregated_topic.yml
+++ b/web/sites/default/config/facets.facet.aggregated_topic.yml
@@ -7,7 +7,7 @@ dependencies:
   module:
     - search_api_page
 id: aggregated_topic
-name: 'Aggregated topic'
+name: 'Results by topic'
 url_alias: aggregated_topic
 weight: 0
 min_count: 1
@@ -61,4 +61,4 @@ processor_configs:
     settings: {  }
 empty_behavior:
   behavior: none
-show_title: false
+show_title: true
