--- a/web/sites/default/config/facets.facet.group_title.yml
+++ b/web/sites/default/config/facets.facet.group_title.yml
@@ -7,7 +7,7 @@ dependencies:
   module:
     - search_api_page
 id: group_title
-name: 'Group title'
+name: 'Results by site'
 url_alias: group_title
 weight: 0
 min_count: 1
@@ -56,4 +56,4 @@ processor_configs:
     settings: {  }
 empty_behavior:
   behavior: none
-show_title: false
+show_title: true
