POWR-94 - added audio paragraph icon, hid labels in audio display

--- a/web/sites/default/config/paragraphs.paragraphs_type.audio.yml
+++ b/web/sites/default/config/paragraphs.paragraphs_type.audio.yml
@@ -1,9 +1,11 @@
 uuid: d94421b0-cc63-41f7-8c16-6334250efc01
 langcode: en
 status: true
-dependencies: {  }
+dependencies:
+  content:
+    - 'file:file:eae3cbc7-2b99-47ea-b725-9fbb911fe96b'
 id: audio
 label: Audio
-icon_uuid: null
+icon_uuid: eae3cbc7-2b99-47ea-b725-9fbb911fe96b
 description: 'Add a new YouTube embedded audio file to your page. You must first upload the audio to your group so that it appears in your group''s media. Since the audio is hosted on YouTube, it will appear in a video player on the page.'
 behavior_plugins: {  }
