--- a/web/sites/default/config/core.entity_view_display.media.audio.default.yml
+++ b/web/sites/default/config/core.entity_view_display.media.audio.default.yml
@@ -33,7 +33,7 @@ content:
     third_party_settings: {  }
   field_media_video_embed_field:
     weight: 2
-    label: above
+    label: hidden
     settings:
       responsive: true
       width: 854
@@ -53,7 +53,7 @@ content:
     type: string
     weight: 1
     region: content
-    label: above
+    label: hidden
     settings:
       link_to_entity: false
     third_party_settings: {  }
