POWR-340 demo config for team to review. DO NOT MERGE

--- a/web/sites/default/config/core.entity_form_display.node.city_service.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.city_service.default.yml
@@ -5,12 +5,14 @@ dependencies:
   config:
     - field.field.node.city_service.field_audience
     - field.field.node.city_service.field_community_actions
+    - field.field.node.city_service.field_did_you_find_this_page_use
     - field.field.node.city_service.field_legacy_path
     - field.field.node.city_service.field_related_content
     - field.field.node.city_service.field_service_mode
     - field.field.node.city_service.field_summary
     - field.field.node.city_service.field_time_to_complete
     - field.field.node.city_service.field_topics
+    - field.field.node.city_service.field_was_this_page_helpful_
     - node.type.city_service
   module:
     - chosen_field
@@ -41,7 +43,7 @@ content:
     type: chosen_select
     region: content
   field_legacy_path:
-    weight: 26
+    weight: 14
     settings:
       size: 60
       placeholder: ''
@@ -150,5 +152,7 @@ content:
     settings: {  }
     third_party_settings: {  }
 hidden:
+  field_did_you_find_this_page_use: true
+  field_was_this_page_helpful_: true
   promote: true
   sticky: true
