--- a/web/sites/default/config/core.entity_view_display.node.city_service.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.city_service.default.yml
@@ -5,18 +5,23 @@ dependencies:
   config:
     - field.field.node.city_service.field_audience
     - field.field.node.city_service.field_community_actions
+    - field.field.node.city_service.field_did_you_find_this_page_use
     - field.field.node.city_service.field_legacy_path
     - field.field.node.city_service.field_related_content
     - field.field.node.city_service.field_service_mode
     - field.field.node.city_service.field_summary
     - field.field.node.city_service.field_time_to_complete
     - field.field.node.city_service.field_topics
+    - field.field.node.city_service.field_was_this_page_helpful_
     - node.type.city_service
   module:
     - ds
     - entity_reference_revisions
+    - field_group
     - panelizer
     - user
+    - votingapi_widgets
+    - vud
 third_party_settings:
   panelizer:
     enable: false
@@ -36,6 +41,24 @@ third_party_settings:
         - field_summary
         - field_time_to_complete
         - field_service_mode
+        - group_was_this_page_helpful_
+        - field_was_this_page_helpful_
+        - flag_helpful
+        - field_did_you_find_this_page_use
+        - flag_no_it_wasn_t_helpful
+  field_group:
+    group_was_this_page_helpful_:
+      children:
+        - flag_helpful
+        - flag_no_it_wasn_t_helpful
+      parent_name: ''
+      weight: 4
+      format_type: fieldset
+      format_settings:
+        id: ''
+        classes: ''
+        description: ''
+      label: 'Was this page helpful?'
 id: node.city_service.default
 targetEntityType: node
 bundle: city_service
@@ -46,6 +69,17 @@ content:
     region: content
     settings: {  }
     third_party_settings: {  }
+  field_did_you_find_this_page_use:
+    weight: 6
+    label: inline
+    settings:
+      readonly: false
+      style: default
+      show_results: false
+      values: {  }
+    third_party_settings: {  }
+    type: voting_api_formatter
+    region: content
   field_service_mode:
     type: entity_reference_revisions_entity_view
     weight: 3
@@ -99,6 +133,30 @@ content:
     third_party_settings: {  }
     type: string
     region: content
+  field_was_this_page_helpful_:
+    weight: 5
+    label: above
+    settings: {  }
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
+    type: vote_up_down_formatter_type
+    region: content
+  flag_helpful:
+    weight: 5
+    region: content
+    settings: {  }
+    third_party_settings: {  }
+  flag_no_it_wasn_t_helpful:
+    weight: 6
+    region: content
+    settings: {  }
+    third_party_settings: {  }
 hidden:
   field_audience: true
   field_community_actions: true
