--- a/web/sites/default/config/core.extension.yml
+++ b/web/sites/default/config/core.extension.yml
@@ -47,6 +47,7 @@ module:
   field_ui: 0
   file: 0
   filter: 0
+  flag: 0
   gmedia: 0
   gnode: 0
   group: 0
@@ -136,6 +137,11 @@ module:
   views_infinite_scroll: 0
   views_ui: 0
   viewsreference: 0
+  votingapi: 0
+  votingapi_widgets: 0
+  vud: 0
+  webform: 0
+  webform_ui: 0
   workflows: 0
   ds: 1
   extlink: 1
