--- a/web/sites/default/config/lightning_core.versions.yml
+++ b/web/sites/default/config/lightning_core.versions.yml
@@ -149,3 +149,9 @@ extlink: 1.1.0
 clamav: 1.0.0
 portland_legacy_redirects: 0.1.0
 linkit: 4.3.0
+webform: 5.0.0-rc20
+webform_ui: 5.0.0-rc20
+flag: 4.0.0-alpha3
+votingapi: 3.0.0-alpha7
+vud: 1.0.0-alpha4
+votingapi_widgets: 1.0.0-alpha3
