--- a/composer.json
+++ b/composer.json
@@ -52,6 +52,7 @@
         "drupal/extlink": "^1.1",
         "drupal/facets": "^1.0",
         "drupal/field_group": "^1.0",
+        "drupal/flag": "^4.0@alpha",
         "drupal/group": "^1.0",
         "drupal/inline_entity_form": "^1.0@RC",
         "drupal/lightning_media": "~2.1",
@@ -73,6 +74,10 @@
         "drupal/twig_tweak": "^2.0",
         "drupal/views_bulk_operations": "^2.2",
         "drupal/viewsreference": "^1.2",
+        "drupal/vote_up_down": "^1.0@alpha",
+        "drupal/votingapi": "^3.0@alpha",
+        "drupal/votingapi_widgets": "^1.0@alpha",
+        "drupal/webform": "^5.0@RC",
         "drush/drush": "9.3.0",
         "roave/security-advisories": "dev-master",
         "webflo/drupal-finder": "^1.0.0",
