--- a/web/sites/default/config/views.view.bureaus_and_offices.yml
+++ b/web/sites/default/config/views.view.bureaus_and_offices.yml
@@ -40,7 +40,7 @@ display:
       exposed_form:
         type: basic
         options:
-          submit_button: 'Search bureaus and offices'
+          submit_button: 'Filter bureaus and offices'
           reset_button: true
           reset_button_label: Reset
           exposed_sorts_label: 'Sort by'
