--- a/web/sites/default/config/views.view.services_index.yml
+++ b/web/sites/default/config/views.view.services_index.yml
@@ -36,7 +36,7 @@ display:
       exposed_form:
         type: basic
         options:
-          submit_button: 'Search services'
+          submit_button: 'Filter services'
           reset_button: true
           reset_button_label: Reset
           exposed_sorts_label: 'Sort by'
