POWR-94 - Fixed bugs: caption not displaying, Audio Url label should not be visible, audio and video players different sizes.

--- a/web/sites/default/config/core.entity_form_display.paragraph.audio.default.yml
+++ b/web/sites/default/config/core.entity_form_display.paragraph.audio.default.yml
@@ -11,6 +11,7 @@ dependencies:
   module:
     - content_moderation
     - entity_browser
+    - maxlength
 id: paragraph.audio.default
 targetEntityType: paragraph
 bundle: audio
@@ -25,9 +26,14 @@ content:
   field_caption:
     weight: 1
     settings:
+      rows: 2
       placeholder: ''
-      rows: 5
-    third_party_settings: {  }
+    third_party_settings:
+      maxlength:
+        maxlength_js: 300
+        maxlength_js_label: 'Content limited to @limit characters, remaining: <strong>@remaining</strong>'
+        maxlength_js_enforce: true
+        maxlength_js_truncate_html: true
     type: string_textarea
     region: content
   field_video:
