--- a/web/sites/default/config/core.entity_view_display.media.audio.embedded.yml
+++ b/web/sites/default/config/core.entity_view_display.media.audio.embedded.yml
@@ -17,7 +17,7 @@ mode: embedded
 content:
   field_media_video_embed_field:
     weight: 0
-    label: above
+    label: hidden
     settings:
       responsive: true
       width: 854
@@ -27,6 +27,7 @@ content:
     type: video_embed_field_video
     region: content
 hidden:
+  content_moderation_control: true
   created: true
   field_media_in_library: true
   field_transcript: true
