POWR-94 - Updated audio paragraph type to reuse field_video_alignment, and updated portland.module to handle audio and video the same when injecting alignment classes.

--- a/web/sites/default/config/core.entity_form_display.paragraph.audio.default.yml
+++ b/web/sites/default/config/core.entity_form_display.paragraph.audio.default.yml
@@ -4,9 +4,9 @@ status: true
 dependencies:
   config:
     - entity_browser.browser.audio_browser
-    - field.field.paragraph.audio.field_alignment
     - field.field.paragraph.audio.field_caption
     - field.field.paragraph.audio.field_video
+    - field.field.paragraph.audio.field_video_alignment
     - paragraphs.paragraphs_type.audio
   module:
     - content_moderation
@@ -17,12 +17,6 @@ targetEntityType: paragraph
 bundle: audio
 mode: default
 content:
-  field_alignment:
-    weight: 3
-    settings: {  }
-    third_party_settings: {  }
-    type: options_select
-    region: content
   field_caption:
     weight: 1
     settings:
@@ -50,6 +44,12 @@ content:
       field_widget_edit: false
     region: content
     third_party_settings: {  }
+  field_video_alignment:
+    weight: 4
+    settings: {  }
+    third_party_settings: {  }
+    type: options_select
+    region: content
   moderation_state:
     type: moderation_state_default
     weight: 2
