--- a/web/sites/default/config/core.entity_view_display.paragraph.audio.default.yml
+++ b/web/sites/default/config/core.entity_view_display.paragraph.audio.default.yml
@@ -3,12 +3,13 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.field.paragraph.audio.field_alignment
     - field.field.paragraph.audio.field_caption
     - field.field.paragraph.audio.field_video
+    - field.field.paragraph.audio.field_video_alignment
     - paragraphs.paragraphs_type.audio
   module:
     - ds
+    - options
 id: paragraph.audio.default
 targetEntityType: paragraph
 bundle: audio
@@ -30,6 +31,12 @@ content:
             classes: {  }
     type: entity_reference_entity_view
     region: content
+  field_video_alignment:
+    weight: 1
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: list_default
+    region: content
 hidden:
-  field_alignment: true
   field_caption: true
