--- a/web/sites/default/config/field.field.paragraph.audio.field_video_alignment.yml
+++ b/web/sites/default/config/field.field.paragraph.audio.field_video_alignment.yml
@@ -1,9 +1,9 @@
-uuid: 7c82caaf-e504-4ad2-8c90-6f91a05b0545
+uuid: 07f40de3-105d-49dd-acd8-1d359a9df822
 langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.paragraph.field_alignment
+    - field.storage.paragraph.field_video_alignment
     - paragraphs.paragraphs_type.audio
   module:
     - custom_add_another
@@ -12,12 +12,12 @@ third_party_settings:
   custom_add_another:
     custom_add_another: ''
     custom_remove: ''
-id: paragraph.audio.field_alignment
-field_name: field_alignment
+id: paragraph.audio.field_video_alignment
+field_name: field_video_alignment
 entity_type: paragraph
 bundle: audio
 label: 'Audio player alignment'
-description: ''
+description: 'Specify how the next paragraph wrap around this audio player.'
 required: false
 translatable: true
 default_value: {  }
