--- a/web/sites/default/config/field.field.node.city_service.field_time_to_complete.yml
+++ b/web/sites/default/config/field.field.node.city_service.field_time_to_complete.yml
@@ -16,7 +16,7 @@ field_name: field_time_to_complete
 entity_type: node
 bundle: city_service
 label: 'Time to complete'
-description: 'How long should it take to complete the step by step instructions to obtain this service? Provide an estimate that helps the community plan accordingly. Use customer service data to create your estimate if available.'
+description: 'How long should it take to complete the step by step instructions to obtain this service? Provide an estimate that helps the community plan accordingly. Use customer service data to create your estimate if available. Use complete sentences. Such as, “The form will take 15-30 minutes to complete. Permits are typically issued within 5 business weeks.”'
 required: false
 translatable: false
 default_value: {  }
