--- a/web/sites/default/config/core.entity_view_display.node.building.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.node.building.teaser.yml
@@ -91,5 +91,6 @@ content:
     third_party_settings: {  }
 hidden:
   content_moderation_control: true
+  field_legacy_path: true
   links: true
   scheduled_publication: true
