--- a/web/sites/default/config/core.entity_view_display.node.information.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.node.information.teaser.yml
@@ -83,5 +83,7 @@ content: {  }
 hidden:
   content_moderation_control: true
   field_body: true
+  field_legacy_path: true
+  field_summary: true
   links: true
   scheduled_publication: true
