--- a/web/sites/default/config/core.entity_view_display.paragraph.audio.default.yml
+++ b/web/sites/default/config/core.entity_view_display.paragraph.audio.default.yml
@@ -9,7 +9,6 @@ dependencies:
     - paragraphs.paragraphs_type.audio
   module:
     - ds
-    - options
 id: paragraph.audio.default
 targetEntityType: paragraph
 bundle: audio
@@ -31,12 +30,6 @@ content:
             classes: {  }
     type: entity_reference_entity_view
     region: content
-  field_video_alignment:
-    weight: 1
-    label: above
-    settings: {  }
-    third_party_settings: {  }
-    type: list_default
-    region: content
 hidden:
   field_caption: true
+  field_video_alignment: true
