POWR-351 Config export

--- a/web/sites/default/config/block.block.searchapipagesearchblockform.yml
+++ b/web/sites/default/config/block.block.searchapipagesearchblockform.yml
@@ -1,6 +1,6 @@
 uuid: f277fa71-7f24-4cfe-9e78-8d68a4029083
 langcode: en
-status: true
+status: false
 dependencies:
   config:
     - search_api_page.search_api_page.search_portland_gov
