--- a/web/sites/default/config/block.block.searchapipagesearchblockformwithportlandstyle.yml
+++ b/web/sites/default/config/block.block.searchapipagesearchblockformwithportlandstyle.yml
@@ -1,26 +1,27 @@
-uuid: ab762bdc-4b57-4ade-a2be-a6838396969a
+uuid: 0e63a77c-2eab-4c1b-80fb-c72db2053976
 langcode: en
 status: true
 dependencies:
   config:
     - search_api_page.search_api_page.search_portland_gov
   module:
-    - search_api_page
+    - portland
     - system
   theme:
     - cloudy
-id: searchapipagesearchblockform_2
+id: searchapipagesearchblockformwithportlandstyle
 theme: cloudy
 region: featured_top
 weight: 0
 provider: null
-plugin: search_api_page_form_block
+plugin: portland_search_block
 settings:
-  id: search_api_page_form_block
-  label: 'Search Api Page search block form'
-  provider: search_api_page
+  id: portland_search_block
+  label: 'Search Api Page search block form with Portland style'
+  provider: portland
   label_display: '0'
   search_api_page: search_portland_gov
+  size: big
 visibility:
   request_path:
     id: request_path
