POWR-351 Enable Portland stled search block

--- a/web/sites/default/config/block.block.searchapipagesearchblockformwithportlandstyle.yml
+++ b/web/sites/default/config/block.block.searchapipagesearchblockformwithportlandstyle.yml
@@ -2,10 +2,7 @@ uuid: 0e63a77c-2eab-4c1b-80fb-c72db2053976
 langcode: en
 status: true
 dependencies:
-  config:
-    - search_api_page.search_api_page.search_portland_gov
   module:
-    - portland
     - system
   theme:
     - cloudy
@@ -18,7 +15,7 @@ plugin: portland_search_block
 settings:
   id: portland_search_block
   label: 'Search Api Page search block form with Portland style'
-  provider: portland
+  provider: core
   label_display: '0'
   search_api_page: search_portland_gov
   size: big
