--- a/web/sites/default/config/block.block.searchapipagesearchblockformwithportlandstyle_2.yml
+++ b/web/sites/default/config/block.block.searchapipagesearchblockformwithportlandstyle_2.yml
@@ -2,10 +2,6 @@ uuid: 8c5255b7-c74d-4aa1-813c-438d94511661
 langcode: en
 status: true
 dependencies:
-  config:
-    - search_api_page.search_api_page.search_portland_gov
-  module:
-    - portland
   theme:
     - cloudy
 id: searchapipagesearchblockformwithportlandstyle_2
@@ -17,7 +13,7 @@ plugin: portland_search_block
 settings:
   id: portland_search_block
   label: 'Search Api Page search block form with Portland style'
-  provider: portland
+  provider: core
   label_display: '0'
   search_api_page: search_portland_gov
   size: small
